Fix logo vertical alignment

--- a/app/assets/stylesheets/nav-bar.scss
+++ b/app/assets/stylesheets/nav-bar.scss
@@ -19,7 +19,7 @@
   font-size: 32px;
   text-align: center;
   font-weight: bold;
-  align-items: baseline;
+  align-items: center;
 }
 
 .logo:hover {
